--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@revolut/checkout": "^1.1.18",
+    "@stripe/react-stripe-js": "^2.5.1",
+    "@stripe/stripe-js": "^3.0.7",
+    "accept-language": "^3.0.18",
     "i18next": "^23.10.0",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-resources-to-backend": "^1.2.0",
     "next": "14.1.0",
-    "next-i18next": "^15.2.0",
     "react": "^18",
+    "react-calendly": "^4.3.0",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18",
-    "react-i18next": "^14.0.5"
+    "react-i18next": "^14.1.0",
+    "stripe": "^14.19.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -29,6 +38,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-styled-components-a11y": "^2.1.32",
+    "prettier": "^3.2.5",
     "typescript": "^5"
   }
 }
