--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
   },
   "dependencies": {
     "accept-language": "^3.0.18",
-    "i18next": "^23.10.0",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-resources-to-backend": "^1.2.0",
     "next": "14.1.0",
+    "next-intl": "^3.9.5",
     "react": "^18",
     "react-cookie": "^7.1.0",
     "react-dom": "^18",
-    "react-i18next": "^14.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
