--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "framer-motion": "^11.0.28",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "next": "14.1.0",
     "next-intl": "^3.9.5",
     "react": "^18",
