--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-intl": "^3.9.5",
     "react": "^18",
     "react-dom": "^18",
+    "schema-dts": "^1.1.2",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
