--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@graphcms/rich-text-html-renderer": "^0.3.0",
     "@next/third-parties": "^14.2.2",
+    "@types/react-scroll": "^1.8.10",
     "framer-motion": "^11.0.28",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
@@ -22,6 +24,7 @@
     "next-intl": "^3.9.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
     "schema-dts": "^1.1.2",
     "styled-components": "^6.1.8"
