--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
     "schema-dts": "^1.1.2",
+    "sharp": "^0.33.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
