--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.0.28",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
+    "js-cookie": "^3.0.5",
     "next": "14.2.0",
     "next-intl": "^3.9.5",
     "react": "^18",
@@ -31,6 +32,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
