--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@graphcms/rich-text-html-renderer": "^0.3.0",
     "@next/third-parties": "^14.2.2",
     "@types/react-scroll": "^1.8.10",
+    "@vercel/speed-insights": "^1.0.12",
     "framer-motion": "^11.0.28",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
