--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-intl": "^3.9.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
     "schema-dts": "^1.1.2",
