--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-intl": "^3.9.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-facebook-pixel": "^1.0.4",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
